--- a/data-architect.html
+++ b/data-architect.html
@@ -57,7 +57,7 @@
 <p>4 days ago ... Experian is seeking a Big Data Architect to join our CIS Product Delivery team. 
 This is a great opportunity for someone who specializes in Kafka...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hummingbird-technologies-ltd.workable.com/j/139886A003?viewed=true'>Big Data Architect - Apply ... - Hummingbird Technologies Ltd - Jobs</a></h5> 
+<h5><a href='https://hummingbird-technologies-ltd.workable.com/j/139886A003?viewed=true'>Big Data Architect - Apply ... - Hummingbird Technologies Ltd - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... You will join a talented team of software engineers, big data engineers, computer 
 vision experts and machine learning researchers, and are expected to get up?...</p>
@@ -88,7 +88,7 @@ Jose, California. Review all of the job details and apply today!</p>
 <p>Jul 17, 2019 ... Senior Data Warehouse Architect. San Francisco, California. Wonderschool. Full 
 Time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/amplifon-pt/job/odvCafwe'> Amplifon Careers - Global IT Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/amplifon-pt/job/odvCafwe'> Amplifon Careers - Global IT Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -158,7 +158,7 @@ applications?...</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/centare/f5c0d61d-16e9-4068-a11b-8347673e8f10'>Centare - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/centare/f5c0d61d-16e9-4068-a11b-8347673e8f10'>Centare - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... We are looking to add a Data Architect to our team here at Centare. In this newly 
 created role, you will be responsible for building the foundation of our?...</p>
@@ -234,7 +234,7 @@ best?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/fractalindustries/job/oKryafwD'>Fractal Industries Careers - Sr. Data Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/fractalindustries/job/oKryafwD'>Fractal Industries Careers - Sr. Data Architect</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -256,7 +256,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999691745433-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999691745433-data-architect-130k-160k-immediate-health-care-benefits-401k-20-days-pto-plus-more-'>IT Pros Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -280,7 +280,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oEUvafwX'>Santander Consumer USA Careers - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
@@ -292,7 +292,7 @@ database models; Documentation of functional requirements and system?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/homeadvisorangieslist/jobs/4350871002'>Job Application for Data Architect/Modeler at HomeAdvisor ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/homeadvisorangieslist/jobs/4350871002'>Job Application for Data Architect/Modeler at HomeAdvisor ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Angie's List is seeking a full-time Data Modeler/Architect to join our Data 
 Management team. The right candidate will lead the development of enterprise 
@@ -306,7 +306,7 @@ class?...</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/Fg6DnYjGng/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
+<h5><a href='http://zgfarchitects.applytojob.com/apply/Fg6DnYjGng/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -390,7 +390,7 @@ implementation of ETL processes throughout the design, build and maintenance
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/attunix/jobs/1745368?gh_jid=1745368'>Job Application for GCP Data Architect at Attunix</a></h5> 
+<h5><a href='https://boards.greenhouse.io/attunix/jobs/1745368?gh_jid=1745368'>Job Application for GCP Data Architect at Attunix</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 24, 2019 ... We're looking for a GCP Data Architect who can design and implement modern 
 architecture for a diverse set of customers and industries. The ideal candidate?...</p>
@@ -411,7 +411,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light">Portland, Oregon, United States</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=58c0403c1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=58c0403c1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-02</p>
 <hr/>
@@ -436,7 +436,7 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-06-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/primerevenue/job/ohWv9fwB'>PrimeRevenue Careers - Director, Data Architecture</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/primerevenue/job/ohWv9fwB'>PrimeRevenue Careers - Director, Data Architecture</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
